# OpenDocument.droid

./: .classpath  .firebaserc  .gitignore  .gitmodules  .project  AndroidManifest.xml  CLAUDE.md  CMakeLists.txt  LICENSE  OpenDocument.apk  OpenOffice Document Reader.ipr  OpenOffice Document Reader.iws  OpenOffice_Document_Reader_1.3.1.apk  OpenOffice_Document_Reader_1.3.2.apk  README  README.md  Reader_1.2.1.apk  Reader_1.2.2.apk  Reader_1.2.3.apk  Reader_1.2.5.apk  Reader_1.2.6.apk  Reader_1.2.7.apk  Reader_1.2.8.apk  Reader_1.2.9.apk  Reader_1.2.apk  Reader_1.3.0.apk  TODO  build-test.sh  build.gradle  conanfile.txt  conanprofile.txt  conanprofile_build.txt  conanprofile_host.txt  crowdin.yml  gradle.properties  proguard-project.txt  project.properties  settings.gradle  storage.rules  test-and-pull-edited-file.sh  (+1 more)
app/: CMakeLists.txt  CMakeUserPresets.json  build.gradle  conan.cmake  conan_android_toolchain.cmake  conandeployer.py  conanfile.py  conanfile.txt  conanprofile.txt  google-services.json  lint.xml  proguard-rules.txt  toolchain.cmake.in
app/src/androidTest/assets/: password-test.odt  spreadsheet-test.ods  style-various-1.docx  style-various-1.odt
app/src/androidTest/java/at/tomtasche/reader/test/: CoreTest.java  DocumentParseTest.java  MainActivityTest.java  MainActivityTests.java  MainActivityUiTests.java  (+3 more)
app/src/androidTest/res/values/: strings.xml
app/src/lite/: google-services.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: about.odt  audio.html  image.html  intro.odt  text-prefix.html  text-suffix.html  video.html  zip-prefix.html  zip-suffix.html
app/src/main/assets/pdf2htmlEX/etc/fonts/: local.conf
app/src/main/assets/share/fonts/: README
app/src/main/cpp/: CCharGC.h  CoreWrapper.cpp  CoreWrapper.h  CoreWrapper.hpp  EnvVar.c  core_wrapper.cpp  core_wrapper.hpp  pdf2htmlEX.cc  tmpfile_hack.cpp  tmpfile_hack.hpp
app/src/main/java/at/tomtasche/reader/: AnalyticsBridge.java
app/src/main/res/anim/: mintegral_anim_scale.xml  mintegral_reward_activity_open.xml  mintegral_reward_activity_stay.xml
app/src/main/res/drawable/: ic_edit.xml  ic_folder_open.xml  ic_fullscreen.xml  ic_help_outline.xml  ic_keyboard_arrow_down.xml  ic_keyboard_arrow_up.xml  ic_pause.xml  ic_play_arrow.xml  ic_save.xml  ic_search.xml  ic_skip_next.xml  ic_skip_previous.xml  mintegral_close_background.xml  mintegral_cm_backward.xml  mintegral_cm_exits.xml  mintegral_cm_forward.xml  mintegral_cm_refresh.xml  mintegral_reward_end_close_shape_oval.xml  mintegral_reward_end_shape_oval.xml  mintegral_reward_shape_end_pager.xml  mintegral_reward_shape_progress.xml  tt_ad_skip_btn_bg.xml  tt_reward_countdown_bg.xml  tt_titlebar_close_seletor.xml
app/src/main/res/layout/: appdownloader_notification_layout.xml  appintro_button_copy.xml  fragment_document.xml  loading_alert.xml  main.xml  mintegral_close_imageview_layout.xml  mintegral_jscommon_authoritylayout.xml  mintegral_loading_dialog.xml  mintegral_loading_view.xml  mintegral_playercommon_player_view.xml  mintegral_reward_activity_video_templete.xml  mintegral_reward_activity_video_templete_transparent.xml  mintegral_reward_clickable_cta.xml  mintegral_reward_endcard_h5.xml  mintegral_reward_endcard_native_hor.xml  mintegral_reward_endcard_native_land.xml  mintegral_reward_endcard_vast.xml  mintegral_reward_videoview_item.xml  print_dialog.xml  tt_activity_rewardvideo.xml  tt_activity_ttlandingpage.xml  tt_activity_videolandingpage.xml  tt_dialog_listview_item.xml  tt_dislike_dialog_layout.xml  tt_native_video_ad_view.xml  tt_splash_view.xml  tt_video_play_layout_for_live.xml  tt_video_traffic_tip.xml  webview_find.xml
app/src/main/res/menu/: edit.xml  menu_main.xml  tts.xml  webview_find.xml
app/src/main/res/value/: mintegral_reward_color.xml
app/src/main/res/values/: bools.xml  mintegral_reward_colors.xml  mintegral_reward_strings.xml  mintegral_reward_style.xml  strings.xml  styles.xml  themes.xml  values.xml
app/src/main/res/values-ca/: strings.xml
app/src/main/res/values-ca-rES/: strings.xml
app/src/main/res/values-cs/: strings.xml
app/src/main/res/values-cs-rCZ/: strings.xml
app/src/main/res/values-da/: strings.xml
app/src/main/res/values-da-rDK/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-de-rDE/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-es-rES/: strings.xml
app/src/main/res/values-fi-rFI/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-fr-rFR/: strings.xml
app/src/main/res/values-ga/: strings.xml
app/src/main/res/values-ga-rIE/: strings.xml
app/src/main/res/values-hi-rIN/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-it-rIT/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ja-rJP/: strings.xml
app/src/main/res/values-ko-rKR/: strings.xml
app/src/main/res/values-large/: styles.xml
app/src/main/res/values-ldpi/: styles.xml
app/src/main/res/values-normal/: styles.xml
app/src/main/res/values-pl/: strings.xml
app/src/main/res/values-pl-rPL/: strings.xml
app/src/main/res/values-pt/: strings.xml
app/src/main/res/values-pt-rBR/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-ru-rRU/: strings.xml
app/src/main/res/values-sl/: strings.xml
app/src/main/res/values-sl-rSI/: strings.xml
app/src/main/res/values-small/: styles.xml
app/src/main/res/values-tr/: strings.xml
app/src/main/res/values-tr-rTR/: strings.xml
app/src/main/res/values-v11/: themes.xml
app/src/main/res/values-v21/: values-v21.xml
app/src/main/res/values-v23/: themes.xml
app/src/main/res/values-v29/: bools.xml  themes.xml
app/src/main/res/values-v35/: themes.xml
app/src/main/res/values-xlarge/: styles.xml
app/src/main/res/values-xxxhdpi/: styles.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/xml/: cache_provider_paths.xml  file_paths.xml
app/src/pro/: AndroidManifest.xml  google-services.json
payme/: lint.xml  (+1 more)
(+304 files in other folders)
